--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/mohammedkabli/unit-test/issues"
   },
-  "homepage": "https://github.com/mohammedkabli/unit-test#readme"
+  "homepage": "https://github.com/mohammedkabli/unit-test#readme",
+  "devDependencies": {
+    "mocha": "^9.2.0"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
+  }
 }
